# quartodoc

./: .devcontainer.json  .flake8  .gitignore  .nojekyll  .pre-commit-config.yaml  Dockerfile  GITHUB.md  LICENSE  MAINTAINERS.md  Makefile  README.md  README.qmd  _extension.yml  about.html  index.html  objects.json  objects.txt  pyproject.toml  quartodoc.py  requirements-dev.txt  robots.txt  search.json  setup.cfg  sitemap.xml  styles.css  tests.py
.github/: CODE_OF_CONDUCT.md
.github/workflows/: ci.yml
_extensions/interlinks/: _extension.yml  example.qmd  interlinks.lua  interlinks.py  objects.txt  objects_siuba.json  objects_vetiver.inv  test.qmd
_extensions/interlinks-experimental/: interlinks.lua
api/: Auto.html  Builder.build.html  Builder.create_inventory.html  Builder.do_blueprint.html  Builder.do_collect.html  Builder.do_summarize.html  Builder.from_quarto_config.html  Builder.html  Builder.write_doc_pages.html  Builder.write_index.html  Builder.write_sidebar.html  BuilderPkgdown.html  BuilderSinglePage.html  MdRenderer.html  MdRenderer.render.html  MdRenderer.render_annotation.html  MdRenderer.render_header.html  MdRenderer.signature.html  MdRenderer.summarize.html  _styles-quartodoc.css  ast.DocstringSectionNotes.html  ast.DocstringSectionSeeAlso.html  ast.DocstringSectionWarnings.html  ast.ExampleCode.html  ast.ExampleText.html  blueprint.html  collect.html  convert_inventory.html  create_inventory.html  get_object.html  index.html  layout.ChoicesChildren.html  layout.ContentElement.html  layout.Doc.html  layout.DocAttribute.html  layout.DocClass.html  layout.DocFunction.html  layout.DocModule.html  layout.Item.html  layout.Layout.html  (+8 more)
case_studies/: objects_sqla.inv  parsing.qmd  some_package.py  sphinx-inventory.md  sphinx-inventory.qmd
docs/: .gitignore  1_generate_api.py  GITHUB.qmd  _quarto.yml  index.qmd  objects-test.txt  objects.json  styles-quartodoc.css  styles.css
docs/_extensions/: interlinks
docs/_filters/: replace-readme-links.lua
docs/api/: index.md
docs/examples/: index.qmd
docs/get-started/: advanced-layouts.qmd  advanced-overview.qmd  architecture.qmd  basic-building.qmd  basic-content.qmd  basic-docs.qmd  building.qmd  crossrefs.qmd  dev-big-picture.qmd  dev-blueprints.qmd  dev-dataclasses.qmd  dev-prepare.qmd  dev-renderers.qmd  dev-snippets.qmd  docstring-examples.qmd  docstring-style.qmd  docstrings.qmd  extending.qmd  extra-build-sequence.qmd  extra-migrating-sphinx.qmd  interlinks-autolink.qmd  interlinks.qmd  overview.qmd  quickstart.qmd  renderers.qmd  sidebar.qmd
docs/tutorials/: index.qmd
examples/: .gitignore  basic.md  basic.qmd  index.html
examples/auto-package/: _quarto.yml  index.html  objects.json  search.json
examples/auto-package/reference/: Auto.html  Builder.html  MdRenderer.html  blueprint.html  collect.html  convert_inventory.html  create_inventory.html  get_function.html  get_object.html  index.html  preview.html
examples/autolinks/: _quarto.yml  app.py  index.qmd
examples/dascore/: .gitignore  _quarto.yml  generate_api.py  index.md
examples/pkgdown/: .gitignore  _quarto.yml  index.html  objects.json  search.json
examples/pkgdown/reference/: Builder.build.html  Builder.build.qmd  Builder.html  Builder.qmd  get_object.html  get_object.qmd  index.html  index.qmd  preview.html  preview.qmd
examples/shiny/: .gitignore  _quarto.yml  _renderer.py  index.html  index.qmd  objects.json  search.json
examples/shiny/reference/: App.html  Calc.html  Effect.html  FileInfo.html  HTML.html  ImgData.html  Inputs.html  Outputs.html  Progress.html  SafeException.html  Session.html  SilentCancelOutputException.html  SilentException.html  TagList.html  Value.html  column.html  download_button.html  file_reader.html  flush.html  get_current_context.html  get_current_session.html  help_text.html  image.html  index.html  index.qmd  input_action_button.html  input_action_link.html  input_checkbox.html  input_checkbox_group.html  input_date.html  input_date_range.html  (+165 more)
examples/single-page/: _quarto.yml  index.html  objects.json  search.json
examples/siuba/: 1_generate_docs.py
examples/vetiver/: quartodoc.ipynb  quartodoc.qmd
examples/weird-install/: _quarto.yml
get-started/: advanced-layouts.html  advanced-overview.html  architecture.html  basic-building.html  basic-content.html  basic-docs.html  crossrefs.html  dev-big-picture.html  dev-dataclasses.html  dev-docstrings.html  dev-prepare.html  dev-renderers.html  docstring-examples.html  docstring-style.html  docstrings.html  extending.html  extra-build-sequence.html  interlinks-autolink.html  interlinks.html  overview.html  quickstart.html  renderers.html  sidebar.html
interlinks/: README.md  example.qmd  interlinks.py  objects_vetiver.json
quartodoc/: __init__.py  __main__.py  _griffe_compat.py  _pydantic_compat.py  ast.py  autosummary.py  interlinks.py  interlinks_auto.py  inventory.py  layout.py  parsers.py  renderers.py  repo_info.py  summarize.py  validation.py
quartodoc/_griffe_compat/: __init__.py  _generate_stubs.py  dataclasses.py  docstrings.py  expressions.py
quartodoc/builder/: _node.py  blueprint.py  collect.py  utils.py  write.py
quartodoc/pandoc/: __init__.py  blocks.py  components.py  inlines.py  meta.py  typing.py
quartodoc/renderers/: __init__.py  base.py  md_renderer.py
quartodoc/static/: styles.css
quartodoc/tests/: example.py  example_alias_target.py  example_alias_target__nested.py  example_attribute.py  example_class.py  example_docstring_full.py  example_docstring_styles.py  example_dynamic.py  example_pydantic.py  example_signature.py  example_star_imports.py  example_stubs.py  example_stubs.pyi  test_ast.py  test_basic.py  test_builder.py  test_builder_blueprint.py  test_cli.py  test_interlinks.py  test_inventory.py  test_layout.py  test_renderers.py  test_repo_info.py  test_validation.py  tests.py
quartodoc/utils/: convert.py  inspect.py
scripts/: build_tmp_starter.py
scripts/filter-spec/: generate_files.py  generate_test_qmd.py
site_libs/bootstrap/: bootstrap.min.css
tutorials/: index.html
(+128 files in other folders)
