[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["quartodoc"]

[tool.pytest.ini_options]
markers = []
testpaths = ["quartodoc/tests"]

[project]
name = "quartodoc"
description = "Generate API documentation with quarto."
readme = "README.md"
keywords = ["documentation", "quarto"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "click",
    "griffe==0.25.0",
    "sphobjinv >= 2.3.1",
    "tabulate >= 0.9.0",
    "importlib-metadata >= 5.1.0",
    "importlib-resources >= 5.10.2",
    "pydantic < 2.0",
    "pyyaml",
    "typing-extensions >= 4.4.0",
    "watchdog >= 3.0.0",
    "plum-dispatch < 2.0.0; python_version < '3.10'",
    "plum-dispatch > 2.0.0; python_version >= '3.10'"
]


[project.urls]
Homepage = "https://github.com/machow/quartodoc"
Documentation = "https://github.com/machow/quartodoc"

[[project.authors]]
name = "Michael Chow"
email = "michael.chow@posit.co"

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = ["pytest", "jupyterlab", "jupytext", "syrupy"]

[project.scripts]
quartodoc = "quartodoc.__main__:cli"
