[metadata]
name = quartodoc
version = dynamic
description = Generate API documentation with quarto.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/machow/quartodoc
author = Michael Chow
author_email = mc_al_github@fastmail.com
license = MIT
keywords = documentation, quarto
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
packages = find:
include_package_data = True
zipsafe = False

python_requires = >3.8
install_requires =
    griffe>=0.25
    plum-dispatch
    sphobjinv
    tabulate
    importlib-metadata
    panflute
    pydantic


[options.extras_require]
dev =
    pytest
    jupyterlab
    jupytext


[project.scripts]
quartodoc = "quartodoc.cli:main"


[bdist_wheel]
universal = 1

[flake8]
exclude = docs
max-line-length = 90
ignore =
    E501    # line too long
    W503    # line before binary operator
    F811    # redefinition of unused function name
